[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blacktrace"
version = "1.0.0"
description = "IP lookup CLI tool with hacker-style UI"
authors = [{name = "Preeyananda Soram"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests",
    "colorama",
]

[project.scripts]
blacktrace = "blacktrace:main"

[project.urls]
Homepage = "https://github.com/PreeyanandaSoram/blacktrace"
